force-app/main/default/objects/Request__c/fields/Existing_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Existing_Mentor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing  Mentor</label>
    <type>Checkbox</type>
</CustomField>