force-app/main/default/objects/Request__c/fields/Known_Training_Organization__c.field-meta.xml
<CustomField>
    <fullName>Known_Training_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Known Training Organization</label>
    <type>Checkbox</type>
</CustomField>