force-app/main/default/objects/Request__c/fields/On_Job_Training__c.field-meta.xml
<CustomField>
    <fullName>On_Job_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Job Training</label>
    <type>Checkbox</type>
</CustomField>