force-app/main/default/objects/Request__c/fields/Recognized_Training__c.field-meta.xml
<CustomField>
    <fullName>Recognized_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם קיימת תוכנית הכשרה מוכרת ע&quot;י האגף</label>
    <type>Checkbox</type>
</CustomField>