force-app/main/default/objects/Request__c/fields/Request_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Request_Purpose__c</fullName>
    <label>מטרת הבקשה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>סיוע במימון הכשרה מקצועית</fullName>
            </value>
            <value>
                <fullName>הסבה מקצועית</fullName>
            </value>
            <value>
                <fullName>סיוע בגיוס עובדים להכשרה</fullName>
            </value>
            <value>
                <fullName>בקשה למידע</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>