force-app/main/default/objects/Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Complete_Info</fullName>
                <label>השלמת פרטים</label>
            </value>
            <value>
                <fullName>Needs_mapping</fullName>
                <label>מיפוי צרכים</label>
            </value>
            <value>
                <fullName>programRequest</fullName>
                <label>המלצה לתכנית</label>
            </value>
            <value>
                <fullName>CloseRequest</fullName>
                <label>סגירת בקשה</label>
            </value>
            <value>
                <fullName>In Treatment</fullName>
            </value>
            <value>
                <fullName>In professional treatment</fullName>
            </value>
            <value>
                <fullName>Continue handling public Requests</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>לא נמצאה תכנית מתאימה</fullName>
                <isActive>false</isActive>
                <label>לא נמצאה תכנית מתאימה</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>