force-app/main/default/objects/Request__c/fields/Training_was_executed__c.field-meta.xml
<CustomField>
    <fullName>Training_was_executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training was executed</label>
    <type>Checkbox</type>
</CustomField>