force-app/main/default/objects/Request__c/recordTypes/CCOperational.recordType-meta.xml
<RecordType>
    <fullName>CCOperational</fullName>
    <active>true</active>
    <description>מוקדים - פניות הציבור וטכני</description>
    <label>Call Center Operation</label>
</RecordType>