force-app/main/default/objects/Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request__c</columns>
    <columns>ExtId__c</columns>
    <columns>Request_Number__c</columns>
    <columns>Account__c</columns>
    <columns>BusinesID_f__c</columns>
    <columns>Business_Fields__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Program__c</columns>
    <columns>Job__c</columns>
    <columns>Closing_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>