force-app/main/default/objects/Request__c/listViews/dsfdsgfds.listView-meta.xml
<ListView>
    <fullName>dsfdsgfds</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ExtId__c</columns>
    <columns>Account__c</columns>
    <columns>BusinesID_f__c</columns>
    <columns>Business_Fields__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>phone__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Program__c</columns>
    <columns>Job__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Contact__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Forms</value>
    </filters>
    <label>בקשות שהגיעו מהאתר</label>
</ListView>